# Serna-APT-Extra

./: .gitignore  LICENSE  README.md  add-source  makefile  packme.sh
add-apt-repositories/: .gitignore  Cargo.toml
add-apt-repositories/src/: advanced.rs  common.rs  main.rs
add-source/: Cargo.toml
add-source/src/: main.rs
serna-apt-extra_0.0.2_darwin-amd64/DEBIAN/: control
src/: main.go  main.rs  utils.go
