[package]
name = "add-apt-repositories"
version = "0.1.0"
authors = ["Diego Magdaleno <diegomagdaleno@protonmail.com>", "Nikan Radan (SmushyTaco) <smushytaco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
