[package]
name = "add-apt-repositories"
version = "0.0.4"
authors = ["Diego Magdaleno <diegomagdaleno@protonmail.com>", "Nikan Radan (SmushyTaco) <smushytaco@gmail.com>"]
edition = "2019"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rprompt = "1.0"
